// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Notification Banner Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 1024,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Show Notifications
          </span>
        </span>
      </button>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Inline Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            css={[Function]}
          />
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={[Function]}
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
            <span
              css={[Function]}
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={[Function]}
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={[Function]}
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 1 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Show Notifications
          </span>
        </span>
      </button>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground 2 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Show Notifications
          </span>
        </span>
      </button>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Snackbar Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Show Notifications
          </span>
        </span>
      </button>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Toast Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Show Notifications
          </span>
        </span>
      </button>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;
